@@ -1,3 +1,9 @@
+2011-03-08  Alex Harsanyi  <AlexHarsanyi@gmail.com>
+
+	* vc-clearcase.el (vc-clearcase-annotate-contributor-to-line):
+	update for new return value from
+	`vc-annotate-extract-revision-at-line'
+
 2011-02-22  Alex Harsanyi  <AlexHarsanyi@gmail.com>
 
 	* vc-clearcase.el (clearcase-get-file-version): new function
